--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "hash-wasm": "^4.12.0",
     "otpauth": "^9.4.1",
     "qrcode.react": "^4.2.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
