--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@noble/curves": "^1.9.7",
+    "@noble/ed25519": "^3.0.0",
     "@noble/hashes": "^1.8.0",
     "hash-wasm": "^4.12.0",
+    "libsodium-wrappers": "^0.8.2",
     "otpauth": "^9.4.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
